<resources>
    <string name="app_name">My Telegram</string>
    <string name="new_group">New Group</string>
    <string name="contacts">Contacts</string>
    <string name="calls">Calls</string>
    <string name="people_nearby">People Nearby</string>
    <string name="saved_messages">Saved Messages</string>
    <string name="settings">Settings</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="telegram_features">Telegram Features</string>
    <string name="nav_header_title">Mahsa</string>
</resources>